# stm32-flac-player

./: .gitattributes  .gitignore  CMakeLists.txt  F7_LCD_HID_Audio Debug.launch  F7_LCD_HID_Audio_wav_player.launch  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: F7_LCD_HID.language.settings.xml
.metadata/.plugins/org.eclipse.core.resources/: 1.snap
.metadata/.plugins/org.eclipse.core.resources/.projects/F7_LCD_HID/: .markers.snap
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Core/Inc/: FreeRTOSConfig.h
Core/Src/: dbgu.c  freertos.c  main.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  system_stm32f7xx.c  term_io.c
Debug/: makefile
Debug/Core/Src/: main.su  stm32f7xx_it.su  subdir.mk
Debug/Drivers/BSP/Components/adv7533/: subdir.mk
Debug/Drivers/BSP/Components/exc7200/: subdir.mk
Debug/Drivers/BSP/Components/ft5336/: subdir.mk
Debug/Drivers/BSP/Components/ft6x06/: subdir.mk
Debug/Drivers/BSP/Components/mfxstm32l152/: subdir.mk
Debug/Drivers/BSP/Components/otm8009a/: subdir.mk
Debug/Drivers/BSP/Components/ov5640/: subdir.mk
Debug/Drivers/BSP/Components/ov9655/: subdir.mk
Debug/Drivers/BSP/Components/s5k5cag/: subdir.mk
Debug/Drivers/BSP/Components/st7735/: subdir.mk
Debug/Drivers/BSP/Components/st7789h2/: subdir.mk
Debug/Drivers/BSP/Components/stmpe811/: subdir.mk
Debug/Drivers/BSP/Components/ts3510/: subdir.mk
Debug/Drivers/BSP/Components/wm8994/: subdir.mk
Debug/Drivers/BSP/STM32746G-Discovery/: subdir.mk
Debug/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
Debug/FATFS/App/: subdir.mk
Debug/LWIP/App/: subdir.mk
Debug/USB_HOST/App/: subdir.mk
Drivers/BSP/Components/otm8009a/: otm8009a.c
Drivers/BSP/Components/ov5640/: Release_Notes.html
Drivers/BSP/Components/wm8994/: wm8994.c
Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_eeprom.c
Drivers/CMSIS/Include/: cmsis_iccarm.h  core_armv8mbl.h  core_armv8mml.h  core_cm0.h  core_cm0plus.h  core_cm1.h  core_cm23.h  core_cm3.h  core_cm33.h  core_cm4.h  core_cm7.h  core_sc000.h  core_sc300.h
Drivers/STM32F7xx_HAL_Driver/Inc/: stm32f7xx_hal_eth.h  stm32f7xx_hal_exti.h  stm32f7xx_ll_usb.h
Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_exti.c  stm32f7xx_hal_hcd.c  stm32f7xx_hal_iwdg.c  stm32f7xx_hal_pwr.c  stm32f7xx_hal_pwr_ex.c  stm32f7xx_ll_usb.c
F7_LCD_HID/Debug/: makefile  sources.mk
F7_LCD_HID/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f7xx_hal_msp.d  stm32f7xx_hal_msp.su  stm32f7xx_it.cyclo  stm32f7xx_it.su  subdir.mk  syscalls.d  term_io.cyclo  term_io.d
F7_LCD_HID/Debug/Drivers/BSP/STM32746G-Discovery/: stm32746g_discovery_audio.cyclo  subdir.mk  (+3 more)
F7_LCD_HID/Debug/FATFS/App/: subdir.mk
F7_LCD_HID/Debug/LWIP/App/: lwip.d  subdir.mk
F7_LCD_HID/Debug/USB_HOST/App/: subdir.mk  usb_host.cyclo  usb_host.d
F7_LCD_HID_Audio_wav_player/: F7_LCD_HID Debug.launch
F7_LCD_HID_Audio_wav_player/Core/Src/: main.c  stm32f7xx_it.c
F7_LCD_HID_Audio_wav_player/Debug/: makefile
F7_LCD_HID_Audio_wav_player/Debug/Core/Src/: dbgu.cyclo  dbgu.d  dbgu.su  freertos.cyclo  freertos.d  main.cyclo  main.d  main.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_timebase_tim.d  stm32f7xx_it.cyclo  stm32f7xx_it.d  stm32f7xx_it.su  subdir.mk  sysmem.d  system_stm32f7xx.d  term_io.su
F7_LCD_HID_Audio_wav_player/Debug/FATFS/App/: fatfs.cyclo  fatfs.d  subdir.mk
F7_LCD_HID_Audio_wav_player/Debug/LWIP/App/: lwip.cyclo  lwip.su  subdir.mk
F7_LCD_HID_Audio_wav_player/Debug/USB_HOST/App/: subdir.mk
Lib/Player/Inc/: controller.h  display.h  files.h  flac_decoder.h  flac_reader.h  logger.h  player.h
Lib/Player/Src/: controller.c  display.c  files.c  flac_decoder.c  flac_reader.c  logger.c  player.c
Lib/libFLAC/: CMakeLists.txt
Lib/libFLAC/Inc/share/: private.h  safe_str.h
Lib/libFLAC/Src/: fixed.c  memory.c  metadata_iterators.c  metadata_object.c
Lib/libflac/src/libFLAC/: stream_decoder.c
Lib/player/Inc/: controller.h  display.h
Lib/player/Src/: controller.c  display.c
Player/Inc/: display.h
Player/Src/: controller.c
USB_HOST/App/: usb_host.c
(+119 files in other folders)
